Add a second paragraph

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <h1>Un super titre</h1>
    <p>
       <br><br> Add a paragraph <br><br>
+      <br> Add a second paragraph <br>
    </p>
 </body>
 </html>
