--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <p>
       <br><br> Add a paragraph <br><br>
       <br> Add a second paragraph <br>
+      <br>Add a third paragraph <br>
    </p>
 </body>
 </html>
