--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <br><br> Add a paragraph <br><br>
       <br> Add a second paragraph <br>
       <br>Add a third paragraph <br>
+      <br> Add 4th paragraph <br>
    </p>
 </body>
 </html>
