--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
    <h1>Un super titre</h1>
    <p>
-      <br><br> Add a paragraph <br><br>
+      <br> Add a paragraph <br>
       <br> Add a second paragraph <br>
-      <br>Add a third paragraph <br>
+      <br> Add a third paragraph <br>
       <br> Add 4th paragraph <br>
+      <br> Add 5th paragraph <br>
    </p>
 </body>
 </html>
