--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
    <h1>Un super titre</h1>
    <p>
       <br> Add a paragraph <br>
-      <br> Add a second paragraph <br>
-      <br> Add a third paragraph <br>
+      <br> Add 2nd paragraph <br>
+      <br> Add 3rd paragraph <br>
       <br> Add 4th paragraph <br>
       <br> Add 5th paragraph <br>
+      <br> Add 6th paragraph <br>
    </p>
 </body>
 </html>
